syntax = "proto3";

option java_package = "Server";

message EmptyRecep {}

message SimplifiedIngredient {
  int32 ingredientId = 1;
  string ingredientName = 2;
  int32 ingredientQuantity = 3;
  float ingredientCost = 4;
}

message Recipe {
  int32 id = 1;
  string name = 2;
  string instruction = 3;
  string type = 4;
  int32 creatorId = 5;
  repeated SimplifiedIngredient ingredients = 6;
}

message AllRecipesResponse {
  repeated Recipe recipes = 1;
}
message RecipeIngredientBasic{
  int32 IngredientId = 1;
  string ingredientName = 2;
  int32 quantity = 3;
}
message RecipeCreationRequest{
  string name = 1;
  string instruction = 2;
  int32 creatorId = 3;
  repeated RecipeIngredientBasic ingredients = 4;
}
message RecipeResponse {
  bool success = 1;
  string message = 2;
  Recipe recipe = 3;
}
message DeleteRecipeRequest {
  int32 id = 1;
}

service RecipeService{
  rpc GetAllRecipes(EmptyRecep) returns (AllRecipesResponse);
  rpc CreateRecipe(RecipeCreationRequest) returns (RecipeResponse);
  rpc UpdateRecipe(Recipe) returns (RecipeResponse);
  rpc DeleteRecipe(DeleteRecipeRequest) returns (RecipeResponse);

}